# MKMChat

./: .coverage  .gitignore  README.md  chat.py  config.py  config_secrets.py.example  data  pyproject.toml  rebuild_all.sh  rebuild_faiss_batch.py  refaiss.py  requirements.txt  test.py
.claude/: settings.local.json
scripts/: run_all.sh  run_e2e.sh  run_tests.sh
src/: __init__.py  app.py  book_summary.py  document_processor.py
src/audit/: __init__.py  full_report.py  parsers.py  pdf_builder.py  report_generator.py  scanners.py  standalone_reports.py
src/loaders/: __init__.py  base_loader.py  epub_loader.py  office_loaders.py  pdf_loader.py
src/models/: __init__.py  anthropic_model.py  local_model.py  perplexity_model.py
src/proc/: __init__.py  document_handler.py  processor.py  recovery.py  vector_store.py
src/research/: __init__.py  handler.py  kb_query.py  model_router.py  models.py  routes.py  synthesizer.py
src/routes/: __init__.py  analysis_routes.py  chat_routes.py  index_routes.py  summary_routes.py
src/services/: __init__.py  chat_service.py  faiss_service.py
src/summary/: __init__.py  batch.py  cleaner.py  faiss_reader.py  llm_client.py  models.py  storage.py  summariser.py
templates/: chat.html
tests/: __init__.py  conftest.py  test_analysis_routes.py  test_api_connections.py  test_app.py  test_book_summary.py  test_chat_cli.py  test_config.py  test_deep_research.py  test_diagnostics.py  test_diagnostics_utils.py  test_document_processor.py  test_file_utils.py  test_model_handlers.py  test_rep.py  test_smoke.py  test_text_utils.py
(+113 files in other folders)
