[project]
name = "mkm-chat"
version = "7.2.0"
description = "MKM Research Document Q&A Application"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["e2e", "js", "node_modules", ".venv", "project"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "e2e: end-to-end browser tests",
    "integration: integration tests requiring external services or live APIs",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/static/*",
    "src/proc/vector_store.py",
    "src/audit/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 97
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass$",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "data/output/audit/coverage_html"

[tool.coverage.xml]
output = "data/output/audit/coverage.xml"

[tool.coverage.json]
output = "data/output/audit/coverage.json"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E741", "F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "F821", "E722"]
